--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horologe</title>
+    <meta name="description" content="Horologe: Lüks saatler ve koleksiyonlar hakkında bilgiler.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://omerfarukeroglu.github.io/Horologe/">
+    <meta property="og:title" content="Horologe">
+    <meta property="og:description" content="Horologe: Lüks saatler ve koleksiyonlar hakkında bilgiler.">
+    <meta property="og:image" content="https://omerfarukeroglu.github.io/Horologe/img/horologeblack.svg">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://omerfarukeroglu.github.io/Horologe/">
+    <meta name="twitter:title" content="Horologe">
+    <meta name="twitter:description" content="Horologe: Lüks saatler ve koleksiyonlar hakkında bilgiler.">
+    <meta name="twitter:image" content="https://omerfarukeroglu.github.io/Horologe/img/horologewhite.svg">
+    <title>Horologe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-…hash…" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet">
